--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,36 @@
 </head>
 
 <body class="bg-gray-100 ">
+  <noscript>
+    <div style="
+        font-family: sans-serif;
+        color: #d32f2f;
+        font-size: 16px;
+        text-align: center;
+        padding: 20px;
+        background-color: #ffebee;
+        border: 1px solid #d32f2f;
+        border-radius: 8px;
+        margin: 20px;
+        max-width: 500px;
+        margin: 40px auto;
+      ">
+      <h2 style="margin-bottom: 10px;">🚫 JavaScript is Disabled</h2>
+      <p>
+        This application requires JavaScript to function properly. It looks like JavaScript is either
+        <strong>disabled</strong> or <strong>blocked</strong> in your browser.
+      </p>
+      <p style="margin-top: 10px;">
+        🔧 <strong>How to Enable JavaScript:</strong>
+      </p>
+      <ul style="text-align: left; display: inline-block; margin: 10px auto;">
+        <li>Go to your browser settings.</li>
+        <li>Find the "JavaScript" section.</li>
+        <li>Enable JavaScript and refresh this page.</li>
+      </ul>
+      <p>If you are using a script blocker, allow scripts from this site.</p>
+    </div>
+  </noscript>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
